# c3di-libs

./: .gitignore  CMakeLists.txt  README.md
cmake/: CommonFlags.cmake  CopyDlls.cmake  Cpp11.cmake  FindDependencies.cmake  FindFreeImage.cmake
libCFG/: CMakeLists.txt
libCFG/include/libCFG/error/: ParameterNotFoundException.h
libCFG/include/libCFG/setup/parameterset/: OutputParameterSet.h  ParameterSet.h
libCFG/include/libCFG/setup/parametersource/: CascadingParameterSource.h  CommandLineParameterSource.h  ManualParameterSource.h  ParameterSource.h  XMLParameterSource.h  anyoption.h
libCFG/src/error/: ParameterNotFoundException.cpp  ParameterNotFoundException.h
libCFG/src/setup/parameterset/: OutputParameterSet.cpp  OutputParameterSet.h  ParameterSet.cpp  ParameterSet.h
libCFG/src/setup/parametersource/: CascadingParameterSource.cpp  CascadingParameterSource.h  CommandLineParameterSource.cpp  CommandLineParameterSource.h  ManualParameterSource.cpp  ManualParameterSource.h  ParameterSource.cpp  ParameterSource.h  XMLParameterSource.cpp  XMLParameterSource.h  anyoption.cpp  anyoption.h
libMMV/: CMakeLists.txt
libMMV/include/: ExternalIncludes.h
libMMV/include/libmmv/algorithm/: Coordinates.h  FileAlgorithms.h  GeometricAlgorithms.h  NumericalAlgorithms.h  RandomAlgorithms.h  VectorAlgorithms.h
libMMV/include/libmmv/algorithm/volumestatistics/: VolumeStatistics.h
libMMV/include/libmmv/evaluation/: DistanceBetweenConsecutiveSlabs.h  LeastSquaresLinearFit.h  RootMeanSquareError.h  SignalToNoiseRatio.h  StackComparator.h  StatisticalStandardMeasures.h  StructuralCorrelation.h  StructuralSimilarityIndex.h
libMMV/include/libmmv/io/: HyperStackIndex.h  IOEnumerations.h
libMMV/include/libmmv/io/datasource/: CachingImageStackDataSource.h  ImageStackDataSource.h  ImageStackDirectoryDataSource.h  MRCDataSource.h
libMMV/include/libmmv/io/deserializer/: ImageDeserializer.h  VolumeDeserializer.h
libMMV/include/libmmv/io/geometry/: Visualizer.h
libMMV/include/libmmv/io/rangetransformation/: IdentityRangeTransformation.h  LinearRangeTransformation.h  RangeTransformation.h
libMMV/include/libmmv/io/serializer/: ImageSerializer.h  MRCWriter.h  VolumeFileFormatWriter.h  VolumeSerializer.h
libMMV/include/libmmv/math/: Float16Compressor.h  Matrix3x3.h  Matrix4x4.h  MatrixStreams.h  Vec2.h  Vec3.h  Vec4.h
libMMV/include/libmmv/model/geometry/: Plane.h  Ray.h
libMMV/include/libmmv/model/image/: Image.h  ImageComparator.h
libMMV/include/libmmv/model/volume/: BoundingBox.h  ByteVolume.h  FloatVolume.h  HalfFloatVolume.h  SubVolume.h  Volume.h  VolumeProperties.h  Voxel.h
libMMV/src/: stdafx.h
libMMV/src/algorithm/: Coordinates.cpp  Coordinates.h  FileAlgorithms.cpp  FileAlgorithms.h  GeometricAlgorithms.cpp  GeometricAlgorithms.h  NumericalAlgorithms.cpp  NumericalAlgorithms.h  RandomAlgorithms.cpp  RandomAlgorithms.h  VectorAlgorithms.cpp  VectorAlgorithms.h
libMMV/src/algorithm/volumestatistics/: VolumeStatistics.cpp  VolumeStatistics.h
libMMV/src/evaluation/: DistanceBetweenConsecutiveSlabs.cpp  DistanceBetweenConsecutiveSlabs.h  LeastSquaresLinearFit.cpp  LeastSquaresLinearFit.h  RootMeanSquareError.cpp  SignalToNoiseRatio.cpp  StackComparator.cpp  StackComparator.h  StatisticalStandardMeasures.cpp  StatisticalStandardMeasures.h  StructuralCorrelation.cpp  StructuralSimilarityIndex.cpp
libMMV/src/io/: HyperStackIndex.cpp  HyperStackIndex.h  IOEnumerations.cpp  IOEnumerations.h
libMMV/src/io/datasource/: CachingImageStackDatasource.cpp  CachingImageStackDatasource.h  ImageStackDataSource.cpp  ImageStackDatasource.h  ImageStackDirectoryDatasource.cpp  ImageStackDirectoryDatasource.h  MRCDataSource.cpp  MRCDataSource.h
libMMV/src/io/deserializer/: ImageDeserializer.cpp  ImageDeserializer.h  VolumeDeserializer.cpp  VolumeDeserializer.h
libMMV/src/io/geometry/: Visualizer.cpp  Visualizer.h
libMMV/src/io/rangetransformation/: IdentityRangeTransformation.cpp  LinearRangeTransformation.cpp  RangeTransformation.cpp  RangeTransformation.h
libMMV/src/io/serializer/: ImageSerializer.cpp  ImageSerializer.h  MRCWriter.cpp  MRCWriter.h  VolumeFileFormatWriter.cpp  VolumeFileFormatWriter.h  VolumeSerializer.cpp  VolumeSerializer.h
libMMV/src/math/: Float16Compressor.cpp  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  MatrixStreams.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
libMMV/src/model/geometry/: Plane.cpp  Plane.h  Ray.cpp  Ray.h
libMMV/src/model/image/: Image.cpp  Image.h  ImageComparator.cpp  ImageComparator.h
libMMV/src/model/volume/: BoundingBox.cpp  BoundingBox.h  ByteVolume.cpp  ByteVolume.h  FloatVolume.cpp  FloatVolume.h  HalfFloatVolume.cpp  HalfFloatVolume.h  SubVolume.cpp  Volume.cpp  Volume.h  VolumeProperties.cpp  VolumeProperties.h  Voxel.cpp  Voxel.h
libMMV/test/: CMakeLists.txt  CMakeTests.txt
libMMV/test/actual/random_image/: randomTest.tif
libMMV/test/actual/volume/: float32_order_xzy.mrc  float_32_internal_halffloat_16.mrc  float_32_inverted.mrc  gaussian3dKernel.mrc  int_16.mrc  uint16_inverted.mrc  uint16_order_xzy.mrc  uint_16.mrc  uint_8.mrc
libMMV/test/expected/random_image/: randomTest_Linux.tif  randomTest_Windows.tif
libMMV/test/expected/volume/: regionUpdatedVolume.mrc  volume_mask_8bit.mrc  volume_test_32bit_copy000.mrc  volume_test_32bit_copy126.mrc  volume_test_32bit_copy252.mrc
libMMV/test/src/unit/: Main.cpp  stdafx.h
libMMV/test/src/unit/framework/: EvaluationTest.cpp  GeometricAlgorithmsTest.cpp  NumericalAlgorithmsTest.cpp  RandomAlgorithmsTest.cpp  VectorAlgorithmsTest.cpp
libMMV/test/src/unit/io/: ImageSerializerTest.cpp  MRCWriterTest.cpp  VolumeDeserializerTest.cpp
libMMV/test/src/unit/math/: Matrix4x4Test.cpp  VecXfTest.cpp
libMMV/test/src/unit/model/volume/: SubVolumeTest.cpp  VolumeSerializerTest.cpp  VolumeTest.cpp
libThreadPool/: CMakeLists.txt
libThreadPool/src/parallel/: Job.cpp  Job.h  ThreadPool.cpp  ThreadPool.h  WorkerThread.cpp  WorkerThread.h
libTimer/: CMakeLists.txt
libTimer/src/time/: TimeUnits.cpp  Timer.cpp
memoryManager/: CMakeLists.txt
(+12 files in other folders)
